--- a/JobsOCBaseConfigDemo/Others/资源文件管理/国际化桥接数据/zh-Hans.lproj/Localizable.strings
+++ b/JobsOCBaseConfigDemo/Others/资源文件管理/国际化桥接数据/zh-Hans.lproj/Localizable.strings
@@ -5,6 +5,9 @@
   Created by Jobs on 2021/11/18.
   
 */
+/// 多语言测试
+"Change the current language environment to Simplified Chinese" = "切换当前语言环境为简体中文";
+"Change the current language environment to English" = "切换当前语言环境为英语";
 
 /// 权限设置
 "NSFaceIDUsageDescription" = "App需要您的同意，才能访问您的面容识别功能，用于安全验证";
