--- a/JobsOCBaseConfigDemo/en.lproj/InfoPlist.strings
+++ b/JobsOCBaseConfigDemo/en.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
 /* 
   InfoPlist.strings
-  Casino
+  JobsOCBaseConfigDemo
 
-  Created by Jobs on 2021/11/18.
+  Created by User on 7/1/24.
   
 */
 
