--- a/JobsOCBaseConfigDemo/zh-Hans.lproj/InfoPlist.strings
+++ b/JobsOCBaseConfigDemo/zh-Hans.lproj/InfoPlist.strings
@@ -1,10 +1,10 @@
 /* 
   InfoPlist.strings
-  Casino
+  JobsOCBaseConfigDemo
 
-  Created by Jobs on 2021/11/18.
+  Created by User on 7/1/24.
   
 */
 
 // Localizable App Name是App在英语环境环境下显示的名称
-CFBundleDisplayName = "Localizable App Name";
+CFBundleDisplayName = "千王之王2000";
