--- a/JobsOCBaseConfigDemo/zh-Hans.lproj/Localizable.strings
+++ b/JobsOCBaseConfigDemo/zh-Hans.lproj/Localizable.strings
@@ -1,67 +1,1 @@
-/* 
-  Localizable.strings
-  JobsOCBaseConfigDemo
-
-  Created by User on 7/1/24.
-  
-*/
-/// 多语言测试
-"App language switch" = "App国际化之应用内部切换语言";
-"By System" = "跟随系统";
-"Chinese" = "中文";
-"English" = "英文";
-"Tagalog" = "他加禄语";
-/// 权限设置
-"NSFaceIDUsageDescription" = "App需要您的同意，才能访问您的面容识别功能，用于安全验证";
-"NSAppleMusicUsageDescription" = "添加曲目到您的音乐库";
-"NSBluetoothAlwaysUsageDescription" = "若不允许，你将无法使用联机服务";
-"NSBluetoothPeripheralUsageDescription" = "若不允许，你将无法使用联机服务";
-"NSCalendarsUsageDescription" = "若不允许，你将无法使用添加日历功能";
-"NSCameraUsageDescription" = "若不允许，你将无法使用拍照功能";
-"NSContactsUsageDescription" = "通讯录信息仅用于查找联系人，并会得到严格保密";
-"NSHealthShareUsageDescription" = "若不允许，你将无法参与运动排行榜活动";
-"NSHealthUpdateUsageDescription" = "若不允许，你将无法参与运动排行榜活动";
-"NSHomeKitUsageDescription" = "若不允许，你将无法使用智能家居服务";
-"NSLocationAlwaysAndWhenInUseUsageDescription" = "我们需要获取你的定位权限以供完成查找附近商户功能";
-"NSLocationAlwaysUsageDescription" = "我们需要您的同意,您的位置信息将用于查看当前位置信息";
-"NSLocationWhenInUseUsageDescription" = "我们需要获取你的定位权限以供完成查找附近商户功能";
-"NSMicrophoneUsageDescription" = "我们需要获取你的麦克风权限以供完成语音搜索功能";
-"NSMotionUsageDescription" = "我们需要获取你的运动权限以完成运动挑战赛功能";
-"NSPhotoLibraryAddUsageDescription" = "我们需要获取你的相册权限以完成选择本地图片功能";
-"NSPhotoLibraryUsageDescription" = "我们需要获取你的相册权限以完成选择本地图片功能";
-"NSRemindersUsageDescription" = "我们需要获取你的提醒事项权限以供添加提醒事项";
-"NSSiriUsageDescription" = "我们需要获取你的Siri权限以方便完成Siri建议功能";
-"NSSpeechRecognitionUsageDescription" = "我们需要获取你的语音识别功能已完成键盘语音识别输入功能";
-"NSVideoSubscriberAccountUsageDescription" = "我们需要获取你的TV权限";
-/// TabBarItem
-"Home" = "首页";
-"XiMa" = "洗码";
-"Recharge" = "充值";
-"CustomerService" = "客服";
-"MemberCenter" = "会员中心";
-/// 登陆/注册/忘记密码
-"B\na\nc\nk\nT\no\nL\no\ng\ni\nn" = "返\n回\n登\n录";
-"L\no\ng\ni\nn" = "新\n用\n户\n注\n册";
-"Forgot code" = "忘记密码";
-"Back to HomePage" = "返回首页";
-"Save the user name" = "保存用户名";
-"Register" = "注册";
-"Login" = "登录";
-"Customer service" = "人工客服";
-"Get" = "获取验证码";
-/// 其他业务
-"User" = "用户名";
-"Code" = "密码";
-"Confirm" = "确认密码";
-"Telephone" = "手机号码";
-"Auth code" = "手机验证码";
-"Play Record" = "洗码记录";
-"My Play" = "我的洗码";
-"Draw it" = "领取洗码";
-///
-"Sec" = "秒";
-"Online customer service" = "在线客服";
-"You can also contact customer service through the following ways" = "您还可以通过以下方式联系客服";
-"Later" = "后获取";
-"zaixiankefu_en" = "zaixiankefu_zh-Hans";
-
+/// key是中文，所以这个文件不写。当通过key检索不到内容时，这个时候key就是内容
