--- a/JobsOCBaseConfigDemo/Others/资源文件管理/语言包/fil-PH.lproj/Localizable.strings
+++ b/JobsOCBaseConfigDemo/Others/资源文件管理/语言包/fil-PH.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "中文" = "Intsik";
 "英文" = "Ingles";
 "他加禄语" = "Tagalog";
+"6.59" = "6.59.png";
 /// 权限设置
 "App需要您的同意，才能访问您的面容识别功能，用于安全验证" = "Kailangan ng App ang iyong pahintulot upang ma-access ang iyong face recognition para sa seguridad na pagpapatunay";
 "添加曲目到您的音乐库" = "Magdagdag ng mga kanta sa iyong music library";
