--- a/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_3/输入框样式_3（输入👨🏻用户名）.md
+++ b/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_3/输入框样式_3（输入👨🏻用户名）.md
@@ -41,7 +41,7 @@
             配置用户名输入框.background = JobsIMG(@"设置弹出框输入框背景图");
             配置用户名输入框.animationColor = HEXCOLOR(0xF2CC78);
 
-            [_用户名输入框 richElementsInViewWithModel:配置用户名输入框];
+            _用户名输入框.jobsRichElementsInViewWithModel(配置用户名输入框);
         }return _用户名输入框;
     }
 
