--- a/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_5/输入框样式_5（上下结构）.md
+++ b/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_5/输入框样式_5（上下结构）.md
@@ -27,7 +27,7 @@
             make.top.equalTo(self.titleLab.mas_bottom).offset(JobsWidth(31));
         }
     }];
-    [tfView richElementsInViewWithModel:model];
+    tfView.jobsRichElementsInViewWithModel(model);
     if ([tfView.getTextField.placeholder isEqualToString:JobsInternationalization(@"Please enter name")]) {
         tfView.getTextField.enabled = [NSString isNullString:self.viewModel.textModel.text];
     }
