--- a/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_8/输入框样式_8（👨🏻用户名,下提示）.md
+++ b/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_8/输入框样式_8（👨🏻用户名,下提示）.md
@@ -22,7 +22,8 @@
                     }else{}
                 }];
                 
-                [inputView richElementsInViewWithModel:model];
+                inputView.jobsRichElementsInViewWithModel(model);
+                
                 [self.view addSubview:inputView];
                 [inputView mas_makeConstraints:^(MASConstraintMaker *make) {
                     make.size.mas_equalTo([JobsAppDoorInputViewBaseStyle_8 viewSizeWithModel:nil]);
