--- a/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_1/输入框样式_1(✉️获取并输入手机短信验证码).md
+++ b/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_1/输入框样式_1(✉️获取并输入手机短信验证码).md
@@ -6,7 +6,7 @@
     doorInputViewBaseStyle = (JobsAppDoorInputViewBaseStyle *)inputView;
     [self addSubview:inputView];
     [self.registerDoorInputViewBaseStyleMutArr addObject:inputView];
-    [inputView richElementsInViewWithModel:self.registerDoorInputViewBaseStyleModelMutArr[i]];
+    inputView.jobsRichElementsInViewWithModel(self.registerDoorInputViewBaseStyleModelMutArr[i]);
     @jobs_weakify(self)
     [inputView actionObjectBlock:^(id data) {
         @jobs_strongify(self)
