--- a/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_7/输入框样式_7（电话号码选择国家号）.md
+++ b/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_7/输入框样式_7（电话号码选择国家号）.md
@@ -1,12 +1,11 @@
 #  输入框样式_7
 
 ```
-
     inputView_7 = JobsAppDoorInputViewBaseStyle_7.new;
     doorInputViewBaseStyle = (JobsAppDoorInputViewBaseStyle *)inputView_7;
     [self addSubview:inputView_7];
     [self.registerDoorInputViewBaseStyleMutArr addObject:inputView_7];
-    [inputView_7 richElementsInViewWithModel:self.registerDoorInputViewBaseStyleModelMutArr[i]];
+    inputView_7.jobsRichElementsInViewWithModel(self.registerDoorInputViewBaseStyleModelMutArr[i]);
     @jobs_weakify(self)
     [inputView_7 actionObjectBlock:^(UITextField *data) {
         @jobs_strongify(self)
@@ -52,7 +51,7 @@
         配置选择区号并输入手机号.moveDistance = JobsWidth(60);
         配置选择区号并输入手机号.titleStrCor = 配置选择区号并输入手机号.placeholderColor = HEXCOLOR_ALPHA(0xC4C4C4,1.f);
 //        配置选择区号并输入手机号.background = JobsIMG(@"设置弹出框输入框背景图");
-        [_选择区号并输入手机号 richElementsInViewWithModel:配置选择区号并输入手机号];
+        _选择区号并输入手机号.jobsRichElementsInViewWithModel(配置选择区号并输入手机号);
         
     }return _选择区号并输入手机号;
 }
