--- a/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_5/输入框样式_5（上下结构）.md
+++ b/JobsOCBaseConfigDemo/OCBaseConfig/JobsMixFunc/JobsAppDoor/登录注册模块公共件/View/输入框样式/DoorInputView/输入框样式_5/输入框样式_5（上下结构）.md
@@ -5,7 +5,7 @@
     @jobs_weakify(self)
     [tfView actionObjectBlock:^(ZYTextField *data) {
         @jobs_strongify(self)
-        [self->dropDownListView dropDownListViewDisappear:nil];
+        self->dropDownListView.dropDownListViewDisappear(nil);
         self->chooseView.getBtn.selected = NO;
         if ([data.placeholder isEqualToString:JobsInternationalization(@"Please enter name")]) {
             self.inputModel.name = data.text;
